Kubernetes/pod.yml
kind: Pod
apiVersion: v1

metadata:
  name: nginx-pod
  namespace: nginx-ns
spec:
  containers:
   - name: nginx
     image: nginx:latest
     ports:
     - containerPort: 80
