Kubernetes/service.yml
apiVersion: v1
kind: Service

metadata:
  name: my-svc

spec:
  selector:
    app: my-app

  ports:
    - protocol: TCP
      port: 8080     # cluster / host port [service]
      targetPort: 5000 # container port
